--- a/src/app/cvtech/cvitem/cvitem.component.css
+++ b/src/app/cvtech/cvitem/cvitem.component.css
@@ -1,6 +1,6 @@
-.oddcolor{
-  background-color: lightcoral;
+.oddcolor {
+  background-color: rgb(238, 175, 144);
 }
-.evencolor{
-  background-color: lightgreen;
+.evencolor {
+  background-color: rgb(229, 240, 128);
 }
