--- a/src/app/cvtech/cvdetail/cvdetail.component.html
+++ b/src/app/cvtech/cvdetail/cvdetail.component.html
@@ -3,16 +3,19 @@
     <div class="card">
       <div class="front">
         <div class="cover">
-          <img src="assets/images/rotating_card_thumb.jpg">
+          <img src="assets/images/rotating_card_thumb.jpg" />
         </div>
         <div class="user">
-          <img class="img-circle" src="assets/images/{{personne.path|defaultthumbnail}}">
+          <img
+            class="img-circle"
+            src="assets/images/{{ personne.path | defaultthumbnail }}"
+          />
         </div>
         <div class="content">
           <div class="main">
-            <h3 class="name">{{personne.name}} {{personne.firstname}}</h3>
-            <p class="profession">{{personne.job}}</p>
-            <p class="text-center">{{personne.cin}}</p>
+            <h3 class="name">{{ personne.name }} {{ personne.firstname }}</h3>
+            <p class="profession">{{ personne.job }}</p>
+            <p class="text-center">{{ personne.cin }}</p>
           </div>
           <div class="footer">
             <i class="fa fa-mail-forward"></i> Auto Rotation
@@ -26,32 +29,32 @@
         <div class="content">
           <div class="main">
             <h4 class="text-center">Age</h4>
-            <h4 class="text-center" [style.color]="'red'">{{personne.age}}</h4>
+            <h4 class="text-center" [style.color]="'red'">
+              {{ personne.age }}
+            </h4>
             <div class="stats-container">
               <div class="stats">
                 <h4>235</h4>
-                <p>
-                  Followers
-                </p>
+                <p>Followers</p>
               </div>
               <div class="stats">
                 <h4>114</h4>
-                <p>
-                  Following
-                </p>
+                <p>Following</p>
               </div>
               <div class="stats">
                 <h4>35</h4>
-                <p>
-                  Projects
-                </p>
+                <p>Projects</p>
               </div>
             </div>
           </div>
         </div>
         <div class="footer">
-          <button class="btn btn-danger" (click)="embaucher()">Embaucher</button>
-          <button class="btn btn-primary" (click)="getmoreinfo()">Details</button>
+          <button class="btn btn-danger" (click)="embaucher()">
+            Embaucher
+          </button>
+          <button class="btn btn-primary" (click)="getmoreinfo()">
+            Details
+          </button>
         </div>
       </div>
     </div>
